--- a/app/views/broker/index.html.erb
+++ b/app/views/broker/index.html.erb
@@ -1,4 +1,4 @@
 <!-- initialize gmap -->
 <div class="container-fluid">
-	<div id="map-canvas" style="height:600px"></div>
+	<div id="map-canvas" style="height:600px; width:90%; left:5%;"></div>
 </div>
