--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -9,7 +9,7 @@
    <div>
       <ul class="nav navbar-nav">
          <li><a href="/apts/index">Buy</a></li>
-         <li><a id="initGmap" href="/broker/index">Sell</a></li>
+         <li><a href="/broker/index">Sell</a></li>
       </ul>
    </div>
 </nav>
