map + animated search bar

--- a/app/views/broker/index.html.erb
+++ b/app/views/broker/index.html.erb
@@ -1,4 +1,10 @@
 <!-- initialize gmap -->
-<div class="container-fluid">
-	<div id="map-canvas" style="height:600px; width:90%; left:5%;"></div>
+<script type="text/javascript">	 showMap();	</script>
+
+<div id="map-canvas" 
+	style="height:648px; 
+  				width:100%; 
+					margin-top:-20px; 
+					overflow:hidden;"> 
 </div>
+
