--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,7 @@
 			<img alt="" src="http://weknowmemes.com/wp-content/uploads/2014/04/fight-me-u-lil-bitch.jpg" height="40%" width="40%" />
 				<br><br>
 			<code>Fuck paying brokers.  Be the broker. <br>
-			If you find the next tenant for your apartment, you get the broker fee. <br>
-			That's what the fuck is up.</code>
+			If you find the next tenant for your apartment, you get the broker fee. </code>
 		</div>
 	</div>
 </div>
