--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,9 @@
 	  map.mapTypes.set(MY_MAPTYPE_ID, customMapType);
 	}
 
+  var showMap = function () { 
+  	initialize();
+  }
 	google.maps.event.addDomListener(window, 'load', initialize);
 
 	</script>
