2nd commit pre-login form

--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-default" role="navigation">
 	<div class="col-md-8">
 	  <div class="navbar-header">
-	     <a class="navbar-brand" href="/"><i class="fa fa-diamond"></i> broker.me</a>
+	     <a class="navbar-brand" href="/"><i class="fa fa-diamond"></i><code> rails </code></a>
 	    <ul class="nav navbar-nav">
-	       <li><a id="list-search" href="/apts/index">Listings</a></li>
-	       <li><a id="map-search" href="/broker/index">Map</a></li>
+	       <li><a id="nutrition-search" href="/food">Food & Drank</a></li>
+	       <li><a id="exercise-search" href="/home">Exercise</a></li>
+	       <li><a id="map-search" href="/maps">Maps</a></li>
 	    </ul>
 	  </div>	
 	</div>
